style.css
*, *::before, *::after {
    box-sizing: border-box;
}

*:not(dialog) {
    margin: 0;
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    display: grid;
    grid-template-columns: 256px 1fr var(--main-right-width);
    grid-template-rows: auto 1fr;
    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    height: 100vh;
}

img, svg {
    display: block;
    max-width: 100%;
    height: 24px;
    width: auto;
}

input, button {
    font: inherit;
}

p, h1, h2, h3, h4 {
    overflow-wrap: break-word;
}

p {
    text-wrap: pretty;
}

h1, h2, h3, h4 {
    text-wrap: balance;
}

#root, #__next {
    isolation: isolate;
}

:root {
    --space-sm: 16px;
    --space-lg: 24px;
    --radius: 8px;
    --main-right-width: 384px;
}

.logo, .search, li {
    display: flex;
    gap: var(--space-sm);
}

label, .top-right-corner svg, .top-right-corner p, .announcements h3, .announcement, .trending h3, .user, .card-icons svg {
    transition: color 0.2s, fill 0.2s;
}

label:hover, .top-right-corner svg:hover, .top-right-corner img:hover, .top-right-corner p:hover, 
.announcements h3:hover, .announcement:hover, .trending h3:hover, .user:hover, .card-icons svg:hover {
    cursor: pointer;
    color: #23415a;
    fill: #23415a;
}

button:hover, li:hover {
    cursor: pointer;
    background-color: #315b7d;
}

.your-projects, .card, .announcements, .logo, .search, .top-right-corner {
    padding: var(--space-lg);
}

.header, .card, .announcement-container, .trending-container {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.sidebar, button {
    background-color: steelblue;
    color: white;
    border: none;
    font-weight: bold;
}

.pfp {
    height: 64px;
    width: auto;
    border-radius: 50%;
}

h1 { 
    font-size: 30px;
}

h2 { 
    font-size: 24px; line-height: 1; 
}

h3 { 
    font-size: 20px;
    display: flex;
    align-items: flex-end;
    margin-bottom: -8px;
}

h4 { 
    font-size: 18px;
    margin-bottom: 8px; 
}

.header {
    grid-column: 2 / 4;
    grid-row: 1 / 2;
    display: grid;
    grid-template-columns: 1fr min(40%, 500px);
    grid-template-rows: auto auto;
    z-index: 1;
}

.sidebar {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    display: grid;
    grid-template-rows: 96px 288px 144px;
    row-gap: 64px;
}

.main {
    grid-column: 2 / 4;
    grid-row: 2 / 3;
    display: grid;
    grid-template-columns: 1fr var(--main-right-width);
    background-color: #dae6f0;
}

.main-right {
    grid-column: 2 / 3;
}

.search {
    align-items: center;
}

input {
    --input-height: 36px;
    
    height: var(--input-height);
    width: min(1000px, 100%);
    border-radius: calc(0.5 * var(--input-height));
    padding: 8px;
    border: none;
    background-color: #dae6f0;
}

input:focus {
    outline: 3px solid #315b7d;
}

.top-right-corner {
    align-items: center;
    justify-content: flex-end;
    min-width: 250px;
    display: flex;
    gap: var(--space-lg);
}

.top-right-corner p {
    white-space: nowrap;
}

.user-greeting {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: auto auto;
    padding: 0 var(--space-lg) var(--space-lg) var(--space-lg);
    column-gap: var(--space-sm);
}

.user-greeting img {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    height: 96px;
    width: auto;
    border-radius: 50%;
    max-width: none;
    align-self: center;
}

.user-greeting p {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    align-self: end;
}

.user-greeting h2 {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    align-self: start;
}

.buttons {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: var(--space-lg);
    place-items: center;
    padding: 0 var(--space-lg) var(--space-lg) var(--space-lg);
}

button {
    --button-height: 48px;
    
    height: var(--button-height);
    width: calc(2.5 * var(--button-height));
    border-radius: calc(0.5 * var(--button-height));
    transition: background-color 0.2s;
}

.logo {
    align-items: center;
    height: fit-content;
}

.logo svg {
    height: 48px;
    fill: white;
}

.nav ul, .menu ul {
    list-style-type: none;
    display: grid;
    grid-auto-rows: 48px;
    align-items: center;
    padding-left: 0;
}

li {
    font-size: 18px;
    align-items: center;
    height: 100%;
    padding-left: var(--space-lg);
    transition: background-color 0.2s, color 0.2s;
    color: white;
}

li svg {
    fill: currentColor;
    transition: fill 0.2s;
}

.your-projects {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(384px, 1fr));
    grid-template-rows: 40px;
    grid-auto-rows: 256px;
    gap: var(--space-sm);
    padding-right: 0;
}

.your-projects h3 {
    grid-column: 1 / -1;
    grid-row: 1 / 2;
}

.card {
    border-radius: var(--radius);
    display: grid;
    grid-template-rows: auto 1fr auto;
    background-color: white;
    border-left: 8px solid goldenrod;
    transition: color 0.2s, transform 0.2s ease;
}

.card:hover {
    cursor: pointer;
    color: #23415a;
    transform: translateY(-4px);
}

.card-icons {
    display: flex;
    justify-content: end;
    gap: var(--space-lg);
}

.card-icons svg {
    fill: #999999;
}

.announcements {
    display: grid;
    grid-template-rows: 40px 1fr;
    gap: var(--space-sm);
}

.announcement-container {
    display: flex;
    flex-direction: column;
    padding: 0 var(--space-lg);
    border-radius: var(--radius);
    background-color: white;
}

.announcement {
    overflow: hidden;
    border-bottom: 1px solid black;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: var(--space-lg) 0;
}

.announcement:last-child {
    border-bottom: none;
}

.trending {
    display: grid;
    grid-template-rows: 40px 1fr;
    gap: var(--space-sm);
    padding: 0 var(--space-lg) var(--space-lg);
}

.trending-container {
    display: flex;
    flex-direction: column;
    padding: var(--space-lg) var(--space-lg) 0 var(--space-lg);
    border-radius: var(--radius);
    background-color: white;
}

.user {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr 1fr;
    column-gap: var(--space-lg);
    padding-bottom: var(--space-lg);
}

.user img {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    align-self: center;
}

.user-name {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    align-self: end;
}

.user-project {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    align-self: start;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

